--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,87 +1,88 @@
 <head>
-  <meta charset="utf-8"/>
-  {% include title.html %}
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
-        name='viewport'/>
-  <!-- Extra details for Live View on GitHub Pages -->
-  <!-- Canonical SEO -->
-  <!--  Social tags      -->
-  <meta
-      content=""
-      name="keywords">
-  <meta
-      content=""
-      name="description">
+    <meta charset="utf-8"/>
+    {% include title.html %}
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
+          name='viewport'/>
+    <!-- Extra details for Live View on GitHub Pages -->
+    <!-- Canonical SEO -->
+    <!--  Social tags      -->
+    <meta
+            content=""
+            name="keywords">
+    <meta
+            content=""
+            name="description">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicons/favicon-16x16.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicons/favicon.ico">
 
-  <!--     Fonts and icons     -->
-  <link href="/assets/fonts/material-icons.css" rel="stylesheet" type="text/css"/>
-  <!-- CSS Files -->
-  <link href="/assets/css/material-dashboard.min.css" rel="stylesheet"/>
-  <!--  <link href="/assets/css/material-kit.min.css" rel="stylesheet"/>-->
-  <link href="/assets/css/markdown.css" rel="stylesheet"/>
-  <link href="/assets/css/theme.css" rel="stylesheet"/>
-  <!--  <link href="/assets/css/theme-dark.css" rel="stylesheet"/>-->
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <!--<link href="/assets/demo/demo.css" rel="stylesheet" />-->
+    <!--     Fonts and icons     -->
+    <link href="/assets/fonts/material-icons.css" rel="stylesheet" type="text/css"/>
+    <!-- CSS Files -->
+    <link href="/assets/css/material-dashboard.min.css" rel="stylesheet"/>
+    <!--  <link href="/assets/css/material-kit.min.css" rel="stylesheet"/>-->
+    <link href="/assets/css/markdown.css" rel="stylesheet"/>
+    <link href="/assets/css/theme.css" rel="stylesheet"/>
+    <!--  <link href="/assets/css/theme-dark.css" rel="stylesheet"/>-->
+    <!-- CSS Just for demo purpose, don't include it in your project -->
+    <!--<link href="/assets/demo/demo.css" rel="stylesheet" />-->
 
-  <!--  代码高亮-->
-  <link rel="stylesheet" href="/assets/css/highlight/atom-one-dark.css">
-  <script src="/assets/plugins/highlight/highlight.js"></script>
+    <!--  代码高亮-->
+    <link rel="stylesheet" href="/assets/css/highlight/atom-one-dark.css">
+    <!--  <script src="/assets/plugins/highlight/highlight.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.2.0/build/highlight.min.js"></script>
 
 
-  <!--   Core JS Files   -->
-  <script src="/assets/js/core/jquery.min.js"></script>
-  <script src="/assets/js/core/popper.min.js"></script>
-  <script src="/assets/js/core/bootstrap-material-design.min.js"></script>
-  <script src="/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-  <!-- Plugin for the momentJs  -->
-  <script src="/assets/js/plugins/moment.min.js"></script>
-  <!--  Plugin for Sweet Alert -->
-  <script src="/assets/js/plugins/sweetalert2.js"></script>
-  <!-- Forms Validations Plugin -->
-  <script src="/assets/js/plugins/jquery.validate.min.js"></script>
-  <script src="/assets/js/plugins/jquery.toc.js"></script>
-  <script src="/assets/js/plugins/mermaid.min.js"></script>
-  <script src="/assets/js/plugins/jquery.cookie.min.js"></script>
-  <!--    <script src="/assets/js/plugins/jquery.json.js"></script>-->
-  <!--    <script src="/assets/js/plugins/bignumber.min.js"></script>-->
-  <!--    <script src="/assets/js/plugins/jsonpath.js"></script>-->
-  <!-- Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
-  <script src="/assets/js/plugins/jquery.bootstrap-wizard.js"></script>
-  <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
-  <script src="/assets/js/plugins/bootstrap-selectpicker.js"></script>
-  <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
-  <script src="/assets/js/plugins/bootstrap-datetimepicker.min.js"></script>
-  <!--  DataTables.net Plugin, full documentation here: https://datatables.net/  -->
-  <script src="/assets/js/plugins/jquery.dataTables.min.js"></script>
-  <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
-  <script src="/assets/js/plugins/bootstrap-tagsinput.js"></script>
-  <!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
-  <script src="/assets/js/plugins/jasny-bootstrap.min.js"></script>
-  <!--  Full Calendar Plugin, full documentation here: https://github.com/fullcalendar/fullcalendar    -->
-  <script src="/assets/js/plugins/fullcalendar.min.js"></script>
-  <!-- Vector Map plugin, full documentation here: http://jvectormap.com/documentation/ -->
-  <script src="/assets/js/plugins/jquery-jvectormap.js"></script>
-  <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-  <script src="/assets/js/plugins/nouislider.min.js"></script>
-  <!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support SweetAlert -->
-  <!-- Library for adding dinamically elements -->
-  <script src="/assets/js/plugins/arrive.min.js"></script>
-  <!-- Chartist JS -->
-  <script src="/assets/js/plugins/chartist.min.js"></script>
-  <!--  Notifications Plugin    -->
-  <script src="/assets/js/plugins/bootstrap-notify.js"></script>
-  <script src="/assets/js/plugins/snows.js"></script>
-  <!--    <script src="/assets/js/plugins/jszip.min.js"></script>-->
-  <!--    <script src="/assets/js/plugins/FileSaver.min.js"></script>-->
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="/assets/js/material-dashboard.min.js" type="text/javascript"></script>
-  <!--  <script src="/assets/js/material-kit.min.js" type="text/javascript"></script>-->
-  <script src="/assets/plugins/axios/dist/axios.js"></script>
-  <script src="/assets/plugins/vue/vue.global.js"></script>
+    <!--   Core JS Files   -->
+    <script src="/assets/js/core/jquery.min.js"></script>
+    <script src="/assets/js/core/popper.min.js"></script>
+    <script src="/assets/js/core/bootstrap-material-design.min.js"></script>
+    <script src="/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+    <!-- Plugin for the momentJs  -->
+    <script src="/assets/js/plugins/moment.min.js"></script>
+    <!--  Plugin for Sweet Alert -->
+    <script src="/assets/js/plugins/sweetalert2.js"></script>
+    <!-- Forms Validations Plugin -->
+    <script src="/assets/js/plugins/jquery.validate.min.js"></script>
+    <script src="/assets/js/plugins/jquery.toc.js"></script>
+    <script src="/assets/js/plugins/mermaid.min.js"></script>
+    <script src="/assets/js/plugins/jquery.cookie.min.js"></script>
+    <!--    <script src="/assets/js/plugins/jquery.json.js"></script>-->
+    <!--    <script src="/assets/js/plugins/bignumber.min.js"></script>-->
+    <!--    <script src="/assets/js/plugins/jsonpath.js"></script>-->
+    <!-- Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
+    <script src="/assets/js/plugins/jquery.bootstrap-wizard.js"></script>
+    <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
+    <script src="/assets/js/plugins/bootstrap-selectpicker.js"></script>
+    <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
+    <script src="/assets/js/plugins/bootstrap-datetimepicker.min.js"></script>
+    <!--  DataTables.net Plugin, full documentation here: https://datatables.net/  -->
+    <script src="/assets/js/plugins/jquery.dataTables.min.js"></script>
+    <!--	Plugin for Tags, full documentation here: https://github.com/bootstrap-tagsinput/bootstrap-tagsinputs  -->
+    <script src="/assets/js/plugins/bootstrap-tagsinput.js"></script>
+    <!-- Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput -->
+    <script src="/assets/js/plugins/jasny-bootstrap.min.js"></script>
+    <!--  Full Calendar Plugin, full documentation here: https://github.com/fullcalendar/fullcalendar    -->
+    <script src="/assets/js/plugins/fullcalendar.min.js"></script>
+    <!-- Vector Map plugin, full documentation here: http://jvectormap.com/documentation/ -->
+    <script src="/assets/js/plugins/jquery-jvectormap.js"></script>
+    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+    <script src="/assets/js/plugins/nouislider.min.js"></script>
+    <!-- Include a polyfill for ES6 Promises (optional) for IE11, UC Browser and Android browser support SweetAlert -->
+    <!-- Library for adding dinamically elements -->
+    <script src="/assets/js/plugins/arrive.min.js"></script>
+    <!-- Chartist JS -->
+    <script src="/assets/js/plugins/chartist.min.js"></script>
+    <!--  Notifications Plugin    -->
+    <script src="/assets/js/plugins/bootstrap-notify.js"></script>
+    <script src="/assets/js/plugins/snows.js"></script>
+    <!--    <script src="/assets/js/plugins/jszip.min.js"></script>-->
+    <!--    <script src="/assets/js/plugins/FileSaver.min.js"></script>-->
+    <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+    <script src="/assets/js/material-dashboard.min.js" type="text/javascript"></script>
+    <!--  <script src="/assets/js/material-kit.min.js" type="text/javascript"></script>-->
+    <script src="/assets/plugins/axios/dist/axios.js"></script>
+    <script src="/assets/plugins/vue/vue.global.js"></script>
 
 </head>
